--- a/man_gazebo/controller/arm_controller_6dof.yaml
+++ b/man_gazebo/controller/arm_controller_6dof.yaml
@@ -8,7 +8,7 @@ arm_controller:
      - joint4
      - joint5
      - joint6
-     - sprayer_joint
+     - fake_joint
      
   constraints:
       goal_time: 0.6
