--- a/man_moveit/config/controllers_3dof.yaml
+++ b/man_moveit/config/controllers_3dof.yaml
@@ -1,14 +1,10 @@
 controller_list:
   - name: ""
-    action_ns: scaled_pos_traj_controller/follow_joint_trajectory
+    action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
       - joint0
       - joint1
       - joint2
       - joint3
-      - joint4
-      - joint5
-      - joint6
       - fake_joint
-
