--- a/man_moveit/config/controllers_4dof.yaml
+++ b/man_moveit/config/controllers_4dof.yaml
@@ -1,6 +1,6 @@
 controller_list:
   - name: ""
-    action_ns: scaled_pos_traj_controller/follow_joint_trajectory
+    action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
       - joint0
@@ -8,7 +8,4 @@ controller_list:
       - joint2
       - joint3
       - joint4
-      - joint5
-      - joint6
       - fake_joint
-
