--- a/man_moveit/config/controllers_5dof.yaml
+++ b/man_moveit/config/controllers_5dof.yaml
@@ -1,6 +1,6 @@
 controller_list:
   - name: ""
-    action_ns: scaled_pos_traj_controller/follow_joint_trajectory
+    action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
       - joint0
@@ -9,6 +9,5 @@ controller_list:
       - joint3
       - joint4
       - joint5
-      - joint6
       - fake_joint
 
